Bug 1390741 - Use BasicCompositor if widget type does not support acceleration r=aosmond,kats